--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%b4%d8%b1%d9%83%d8%a9-%d9%83%d8%a8%d8%b1%d9%89/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d8%b7%d8%a7%d9%82%d8%a9/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >تأمين الطاقة</a
                           >
                         </li>
@@ -2220,7 +2220,7 @@
                       >
                         <a
                           class="dropdown-item"
-                          href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%b4%d8%b1%d9%83%d8%a9-%d9%83%d8%a8%d8%b1%d9%89/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d8%b7%d8%a7%d9%82%d8%a9/"
+                          href="https://dash-navy-three.vercel.app/data"
                           >تأمين الطاقة</a
                         >
                       </li>
@@ -4748,8 +4748,8 @@
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dropdown nav-item list-inline-item nav-item-1305"
                 >
                   <a
-                    href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/"
-                    class="dropdown-toggle"
+                  href="https://dash-navy-three.vercel.app/data"
+                  class="dropdown-toggle"
                     aria-haspopup="true"
                     aria-expanded="false"
                     >دليل المستثمر</a
@@ -4802,7 +4802,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%aa%d9%82%d8%a7%d8%b1%d9%8a%d8%b1-%d9%85%d8%a7%d9%84%d9%8a%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >تقارير مالية</a
                       >
                     </li>
@@ -4811,7 +4811,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%ad%d9%88%d9%83%d9%85%d8%a9-%d8%a7%d9%84%d8%b4%d8%b1%d9%83%d8%a7%d8%aa/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >حوكمة الشركات</a
                       >
                     </li>
@@ -4820,7 +4820,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%a3%d8%ae%d8%a8%d8%a7%d8%b1-%d8%a7%d8%ac%d8%aa%d9%85%d8%a7%d8%b9%d8%a7%d8%aa-%d8%a7%d9%84%d9%87%d9%8a%d8%a6%d8%a9-%d8%a7%d9%84%d8%b9%d8%a7%d9%85%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >أخبار اجتماعات الجمعية العامة</a
                       >
                     </li>
@@ -4829,7 +4829,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d9%85%d8%b9%d9%84%d9%88%d9%85%d8%a7%d8%aa-%d8%ad%d8%b5%d8%a9-%d8%a7%d9%84%d8%a3%d8%b3%d9%87%d9%85/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >معلومات حصة الأسهم</a
                       >
                     </li>
@@ -4838,7 +4838,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%aa%d8%b5%d9%86%d9%8a%d9%81%d8%a7%d8%aa-%d8%a7%d8%a6%d8%aa%d9%85%d8%a7%d9%86%d9%8a%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >التصنيفات الائتمانية</a
                       >
                     </li>
@@ -4847,7 +4847,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%b9%d8%b1%d9%88%d8%b6-%d8%aa%d9%82%d8%af%d9%8a%d9%85%d9%8a%d8%a9-%d9%84%d9%84%d9%85%d9%83%d8%a7%d9%84%d9%85%d8%a7%d8%aa-%d8%a7%d9%84%d8%ac%d9%85%d8%a7%d8%b9%d9%8a%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >عروض تقديمية للمكالمات الجماعية</a
                       >
                     </li>
@@ -4856,7 +4856,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d8%b3%d9%8a%d8%a7%d8%b3%d8%a9-%d8%aa%d9%88%d8%b2%d9%8a%d8%b9-%d8%a7%d9%84%d8%a3%d8%b1%d8%a8%d8%a7%d8%ad/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >سياسة توزيع الأرباح</a
                       >
                     </li>
@@ -4865,7 +4865,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d8%af%d9%84%d9%8a%d9%84-%d8%a7%d9%84%d9%85%d8%b3%d8%aa%d8%ab%d9%85%d8%b1/%d9%85%d8%b9%d9%84%d9%88%d9%85%d8%a7%d8%aa-%d9%85%d8%a7%d9%84%d9%8a%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         >معلومات مالية</a
                       >
                     </li>
@@ -4875,8 +4875,8 @@
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dropdown nav-item list-inline-item nav-item-1357"
                 >
                   <a
-                    href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/"
-                    class="dropdown-toggle"
+                  href="https://dash-navy-three.vercel.app/data"
+                  class="dropdown-toggle"
                     aria-haspopup="true"
                     aria-expanded="false"
                     >منتجات</a
@@ -4929,7 +4929,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/"
+                        href="https://dash-navy-three.vercel.app/data"
                         aria-haspopup="true"
                         aria-expanded="false"
                         >الأفراد</a
@@ -4940,7 +4940,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%a7%d9%84%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%b9%d9%84%d9%89-%d8%a7%d9%84%d8%b3%d9%8a%d8%a7%d8%b1%d8%a7%d8%aa/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >التأمين على السيارات</a
                           >
                         </li>
@@ -4949,7 +4949,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d8%b3%d9%81%d8%b1/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >تأمين السفر</a
                           >
                         </li>
@@ -4958,7 +4958,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d9%82%d9%88%d8%a7%d8%b1%d8%a8-%d9%88%d8%a7%d9%84%d9%8a%d8%ae%d9%88%d8%aa/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >التأمين على اليخوت والقوارب</a
                           >
                         </li>
@@ -4967,7 +4967,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d8%ae%d8%a7%d8%af%d9%85%d8%a9-%d8%a7%d9%84%d9%85%d9%86%d8%b2%d9%84%d9%8a%d8%a9/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >التأمين على الخادمة المنزلية</a
                           >
                         </li>
@@ -4976,7 +4976,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%b7%d8%a8%d9%8a/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >التأمين الطبي</a
                           >
                         </li>
@@ -4985,7 +4985,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%a7%d9%84%d8%b4%d8%ae%d8%b5%d9%8a%d8%a9/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d9%85%d9%86%d8%b2%d9%84/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >التأمين على المنازل</a
                           >
                         </li>
@@ -4996,7 +4996,7 @@
                     >
                       <a
                         class="dropdown-item"
-                        href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%b4%d8%b1%d9%83%d8%a9-%d9%83%d8%a8%d8%b1%d9%89/"
+href="https://dash-navy-three.vercel.app/data"
                         aria-haspopup="true"
                         aria-expanded="false"
                         >الشركات</a
@@ -5007,7 +5007,7 @@
                         >
                           <a
                             class="dropdown-item"
-                            href="https://www.qiic.com.qa/ar/%d9%85%d9%86%d8%aa%d8%ac%d8%a7%d8%aa/%d8%b4%d8%b1%d9%83%d8%a9-%d9%83%d8%a8%d8%b1%d9%89/%d8%aa%d8%a3%d9%85%d9%8a%d9%86-%d8%a7%d9%84%d8%b7%d8%a7%d9%82%d8%a9/"
+                            href="https://dash-navy-three.vercel.app/data"
                             >تأمين الطاقة</a
                           >
                         </li>
